dashboard header and form styled

--- a/nu-kenzie/src/styles/global-styles.css
+++ b/nu-kenzie/src/styles/global-styles.css
@@ -8,6 +8,7 @@
   --color-grey-3: #868e96;
   --color-grey-2: #e9ecef;
   --color-grey-1: #f8f9fa;
+  --dashboard-background: #f8f9fa;
   --font-weight-extraBold: 800;
   --font-weight-bold: 700;
   --font-weight-semiBold: 600;
