--- a/nu-kenzie/src/Components/Form/index.css
+++ b/nu-kenzie/src/Components/Form/index.css
@@ -1,4 +1,4 @@
-form {
+.form__transaction {
   max-width: 363px;
   display: flex;
   flex-direction: column;
@@ -9,11 +9,11 @@ form {
   gap: 0.75rem;
 }
 
-form label {
+.form__transaction label {
   font-size: var(--body-font);
 }
 
-form > input {
+.form__transaction > input {
   width: 314px;
   max-width: 100%;
   height: 3.25rem;
@@ -25,30 +25,35 @@ form > input {
   outline: none;
 }
 
-form > input:focus {
+.form__transaction > input:focus {
   background-color: #fff;
   border: 2px solid var(--color-primary);
 }
-form > p {
+.form__transaction > p {
   font-size: var(--body-font);
   color: var(--color-grey-3);
 }
 
-form .valueInput__container {
+.form__transaction .valueInput__container {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   width: 100%;
 }
 
-form .valueInput__container .valueInput__container--addValueSymbol {
+.form__transaction
+  .valueInput__container
+  .valueInput__container--addValueSymbol {
   display: flex;
   flex-direction: column;
   gap: 0.75rem;
   position: relative;
 }
 
-form .valueInput__container .valueInput__container--addValueSymbol > input {
+.form__transaction
+  .valueInput__container
+  .valueInput__container--addValueSymbol
+  > input {
   width: 7.2rem;
   max-width: 100%;
   height: 48px;
@@ -60,7 +65,7 @@ form .valueInput__container .valueInput__container--addValueSymbol > input {
   outline: none;
 }
 
-form
+.form__transaction
   .valueInput__container
   .valueInput__container--addValueSymbol
   > input:focus {
@@ -68,24 +73,33 @@ form
   border: 2px solid var(--color-primary);
 }
 
-form .valueInput__container .valueInput__container--addValueSymbol > span {
+.form__transaction
+  .valueInput__container
+  .valueInput__container--addValueSymbol
+  > span {
   position: absolute;
   top: 55%;
   left: 72%;
 }
 
-form .valueInput__container .valueInput__container--selectType {
+.form__transaction .valueInput__container .valueInput__container--selectType {
   display: flex;
   flex-direction: column;
   gap: 0.75rem;
   align-items: flex-end;
 }
 
-form .valueInput__container .valueInput__container--selectType > label {
+.form__transaction
+  .valueInput__container
+  .valueInput__container--selectType
+  > label {
   align-self: flex-start;
 }
 
-form .valueInput__container .valueInput__container--selectType > select {
+.form__transaction
+  .valueInput__container
+  .valueInput__container--selectType
+  > select {
   width: 7.2rem;
   max-width: 100%;
   height: 48px;
@@ -99,7 +113,7 @@ form .valueInput__container .valueInput__container--selectType > select {
   color: var(--color-grey-4);
 }
 
-form > button {
+.form__transaction > button {
   max-width: 314px;
   height: 48px;
   border: none;
@@ -111,6 +125,6 @@ form > button {
   font-weight: var(--font-weight-semiBold);
 }
 
-form > button:hover {
+.form__transaction > button:hover {
   background-color: var(--color-primary-2);
 }
