--- a/nu-kenzie/src/Components/Dashboard/index.css
+++ b/nu-kenzie/src/Components/Dashboard/index.css
@@ -73,5 +73,19 @@
 .main__container .transactions__container > h3 {
   font-weight: var(--font-weight-bold);
   color: var(--color-grey-4);
-  margin-bottom: 1rem;
+  margin-bottom: 2rem;
+}
+
+@media (min-width: 1024px) {
+  .header__container {
+    width: 70%;
+  }
+
+  .main__container {
+    margin-top: 2rem;
+    width: 70%;
+    flex-direction: row;
+    gap: 59px;
+    justify-content: center;
+  }
 }
